--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-A sample Ripple app made by Dave Hersey based on code by Lars Birkemose
+-- LEGACY
+A sample Ripple app made by Dave Hersey based on code by Lars Birkemose.
